--- a/package.json
+++ b/package.json
@@ -24,14 +24,16 @@
     "babel-core": "^6.3.26",
     "bluebird": "^3.1.1",
     "body-parser": "^1.14.2",
-    "cluster-respawn": "^0.0.6",
+    "cluster-respawn": "^0.1.0",
     "cookie-parser": "^1.4.0",
     "csurf": "^1.8.3",
     "debug": "^2.2.0",
     "express": "^4.13.3",
     "history": "^1.17.0",
+    "hrduration": "^1.0.0",
     "immutable": "^3.7.6",
     "lodash": "^3.10.1",
+    "morgan": "^1.6.1",
     "query-string": "^3.0.0",
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
@@ -53,20 +55,26 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-es2015-node4": "^2.0.2",
     "babel-preset-react": "^6.3.13",
+    "bootstrap": "^3.3.6",
     "css-loader": "^0.23.1",
     "del": "^2.2.0",
     "eslint": "^1.10.3",
     "eslint-plugin-react": "^3.14.0",
+    "exports-loader": "^0.6.2",
     "extract-text-webpack-plugin": "^0.9.1",
     "file-loader": "^0.8.5",
     "gulp": "^3.9.0",
     "gulp-help": "^1.6.1",
     "gulp-util": "^3.0.7",
+    "imports-loader": "^0.6.5",
     "json-loader": "^0.5.4",
+    "less": "^2.5.3",
+    "less-loader": "^2.2.2",
     "node-libs-browser": "^0.5.3",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.0",
     "stylus-loader": "^1.4.2",
+    "url-loader": "^0.5.7",
     "webpack": "^1.12.9",
     "webpack-dev-middleware": "^1.4.0",
     "webpack-hot-middleware": "^2.6.0"
