--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "immutable": "^3.7.6",
     "lodash": "^3.10.1",
     "morgan": "^1.6.1",
+    "node-uuid": "^1.4.7",
     "query-string": "^3.0.0",
     "react": "^0.14.5",
     "react-dom": "^0.14.5",
